samples/_failures_safe/1761163731_7ce6e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bfff65b7.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_bfff65b7.c:155:9: error: expected declaration or statement at end of input
  155 |         case TOKEN_STRING: printf("STRING");
      |         ^~~~
./samples/SAFE/__tmp_bfff65b7.c:155:9: error: expected declaration or statement at end of input
